# transaction-reanimate

./: hie.yaml  transaction-reanimate.cabal
app/: auction.hs  monadic.hs  oracle.hs  tokensale.hs  transactions.hs  uniswap.hs
src/: AnimationM.hs  Core.hs  Oracle.hs  TokenSale.hs  Transaction.hs
src/Reanimate/EUTxO/: AnimationM.hs  Core.hs
src/Reanimate/EUTxO/Examples/: Auction.hs  Monadic.hs  Oracle.hs  TokenSale.hs  Transaction.hs  Uniswap.hs
src/Reanimate/EUTxO/Monadic/: Advanced.hs  Simple.hs
